--- a/turf.css
+++ b/turf.css
@@ -110,27 +110,37 @@
       gap: 30px;
       padding: 20px;
     }
+    .deta {
+      margin-top: -28px;
+      margin:1px auto;
+      
+    }
+    h3 {
+      margin: 5px;
+      margin-top: -5px;
+      margin-bottom: -5px;
+    }
     .turf-box {
       background-color: #1e1e1e;
       border: 1px solid #444;
-      width: 90%;
-      max-width: 250px;
-      min-width: 200;
+      width: 99%;
+      max-width: 350px;
       padding: 15px;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
       cursor: pointer;
+      display: flex;
       transition: transform 0.3s;
     }
     .turf-box:hover {
       transform: scale(1.05);
     }
     .turf-box img {
-      width: 100%;
-      height: 140px;
+      width: 40%;
+      height: 110px;
+      margin: 5px;
       object-fit: cover;
       border-radius: 8px;
-      margin-bottom: 10px;
     }
     .form-container {
       background-color: #fff;
