--- a/turf.css
+++ b/turf.css
@@ -5,8 +5,8 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #121212;
-      color: #fff;
+      background-color: #243024;
+      color: #000000;
     }
     #main {
       background: linear-gradient(90deg, #1b5e20, #2e7d32);
@@ -107,8 +107,8 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
-      padding: 20px;
+      gap: 5px;
+      padding: 0px;
     }
     .deta {
       margin-top: -28px;
@@ -121,8 +121,8 @@
       margin-bottom: -5px;
     }
     .turf-box {
-      background-color: #1e1e1e;
-      border: 1px solid #444;
+      background-color: #000000;
+      color: #fff3f3;
       width: 100%;
       max-width: 350px;
       padding: 15px;
@@ -202,5 +202,6 @@
         text-align: left;
       }
     }  
+
 
 
