--- a/turf.css
+++ b/turf.css
@@ -187,6 +187,7 @@
       background-color: #2e7d32;
     }
     #footer {
+      margin-top: 20px;
       background-color: #1c1c1c;
       color: #ccc;
       padding: 30px 20px;
@@ -202,6 +203,7 @@
         text-align: left;
       }
     }  
+
 
 
 
